--- a/taejin/css/footer.css
+++ b/taejin/css/footer.css
@@ -78,3 +78,44 @@ footer {
     font-size: 12px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 768px) {
+    footer {
+        width: 100%;
+        height: auto;
+        background-color: #2a3e48;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 50px 0px;
+    }
+    .footer_contents {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer_contents_info {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+    .footer_contents_info > .footer_contents_info-1,
+    .footer_contents_info > .footer_contents_info-2,
+    .footer_contents_info > .footer_contents_info-3 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-right: 60px;
+    }
+    .footer_contents_info-4 {
+        width: fit-content;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        color: #2a3e65;
+        background-color: white;
+        cursor: pointer;
+    }
+}
