--- a/yuna/css/event_ended3.css
+++ b/yuna/css/event_ended3.css
@@ -103,6 +103,7 @@
 @media screen and (max-width: 768px) {
   .event {
     background-color: #f5f5f5;
+    padding: 80px 30px;
   }
   .event > .event__title {
     font-size: 20px;
